--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,11 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+bin
+obj
+packages 
+.vs
+
+Database.db
+Database.db*
